# ArgonCodeKits

./: README.md  hash.py  os.py  pyproject.toml
.github/workflows/: release.yml
ArgonCodeKits/: __init__.py
ArgonCodeKits/src/: __init__.py  extra.py  log.py  system.py
ArgonCodeKits/tests/: test.extra.py  test.system.py  test_hash.py  test_log.py
