[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ArgonCodeKits"
version = "0.4.4"
description = "Argon的代码库，包含一些实用的工具函数，旨在提高开发效率和代码精简度。"
readme = "README.md"
authors = [
    {name = "Argon", email = "smmomm@126.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Security :: Cryptography",
]
keywords = ["utils", "hash", "md5", "sha256", "filesystem", "encryption"]
requires-python = ">=3.6"
dependencies = [
    "coloredlogs>=15.0.1"
]


[project.urls]
Homepage = "https://github.com/mifongjvav/ArgonCodeKits"
Repository = "https://github.com/mifongjvav/ArgonCodeKits"
BugTracker = "https://github.com/mifongjvav/ArgonCodeKits/issues"

[tool.setuptools]
packages = ["ArgonCodeKits"]  # 直接指定包名
